Now showing a map component with the route when displaying the workout overview component and there are tracked activities; Fixed spinner overlap when using devices with 768px of width;

--- a/frontend/src/app/users/workout-overview-card/workout-overview-card.component.css
+++ b/frontend/src/app/users/workout-overview-card/workout-overview-card.component.css
@@ -5,3 +5,33 @@
     max-width: calc(100% - 100px);
     display: inline-flex;
 }
+
+.tracked-activities-toolbar-container {
+    display: flex;
+}
+
+.tracked-activity-container {
+   width: 100%;
+   padding-top: 2px;
+}
+
+.tracked-activity-title-container {
+   width: 100%;
+}
+
+.tracked-activity-title-no-arrows {
+    border-bottom-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+}
+
+.activity-previous-arrow {
+    display: flex;
+    align-items: center;
+    border-bottom-left-radius: 0px !important;
+}
+
+.activity-next-arrow {
+    display: flex;
+    align-items: center;
+    border-bottom-right-radius: 0px !important;
+}
